[FIX] mail: thin scrollbar in discuss UI
Scrollbar do no look well on Discuss UI, mostly because they are
too thick by default and also the ruler background doesn't match
with the overall style.

This commit fixes the issue by using thin scrollbar and also making
the background transparent. Note that the transparent background
does not work on Safari, but most Apple devices have dynamic showing
of scrollbars by default so it shouldn't be much of an issue.

closes odoo/odoo#213473

X-original-commit: cdc7ac9f96927ca857763f6ad625b5101b1e4fe1

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -142,6 +142,11 @@ $o-discuss-talkingColor: lighten($success, 10%);
     border-top-left-radius: calc((#{$border-radius} + #{$border-radius-lg}) * 3 / 4) !important;
 }
 
+.o-scrollbar-thin {
+    scrollbar-width: thin;
+    scrollbar-color: $gray-400 transparent;
+}
+
 .o-text-white {
     color: #FFF !important;
 }
